Debug grids clearfix moved to a mixin

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ $space-l: 20px</code>
               <h2 class="firm">Grids</h2>
               <img class="article-pic" src="images/article/maintenance.jpg" alt="" />
               <p class="mbl">We like <a href="http://github.com/stubbornella/oocss/blob/master/core/grid/grids.css">Nicole Sullivan grids</a> system. There are 6 sizes available by default. We modified class names a bit to write less:</p>
-              <div class="clearfix debug-grids">
+              <div class="debug-grids">
                 <div class="col1of2">
                   <div class="inner-col">1 of 2</div>
                 </div>
@@ -399,7 +399,7 @@ $space-l: 20px</code>
                   <div class="inner-col">1 of 2</div>
                 </div>
               </div>
-              <div class="clearfix debug-grids">
+              <div class="debug-grids">
                 <div class="col1of3">
                   <div class="inner-col">1 of 3</div>
                 </div>
@@ -410,7 +410,7 @@ $space-l: 20px</code>
                   <div class="inner-col">1 of 3</div>
                 </div>
               </div>
-              <div class="clearfix debug-grids">
+              <div class="debug-grids">
                 <div class="col1of4">
                   <div class="inner-col">1 of 4</div>
                 </div>
@@ -424,7 +424,7 @@ $space-l: 20px</code>
                   <div class="inner-col">1 of 4</div>
                 </div>
               </div>
-              <div class="clearfix debug-grids">
+              <div class="debug-grids">
                 <div class="col1of5">
                   <div class="inner-col">1 of 5</div>
                 </div>
@@ -441,7 +441,7 @@ $space-l: 20px</code>
                   <div class="inner-col">1 of 5</div>
                 </div>
               </div>
-              <div class="clearfix debug-grids">
+              <div class="debug-grids">
                 <div class="col1of6">
                   <div class="inner-col">1 of 6</div>
                 </div>
