Left navigation interaction

--- a/index.html
+++ b/index.html
@@ -13,36 +13,22 @@
   </head>
   <body>
     <div class="container">
-      <a href="http://railsware.com" class="link-by-railsware">Brought to you by Railsware</a>
+      <a href="http://railsware.com" class="link-by-railsware">
+        Brought to you by Railsware
+      </a>
+      <div class="js-sidebar"></div>
       <div class="wrapper">
         <div class="js-header"></div>
         <div class="js-introduction"></div>
         <div class="js-problems"></div>
-
-        <!-- Achievements ============================-->
-        <div class="row">
-          <div class="col1of4 by-right">
-            <h2 class="firm">Benefits</h2>
-          </div>
-          <div class="col3of4">
-            <div class="js-look"></div>
-            <div class="js-inheritance"></div>
-            <div class="js-object"></div>
-            <div class="js-module"></div>
-            <div class="js-codestyle"></div>
-            <div class="js-sass"></div>
-            <div class="js-classname"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col1of4 by-right">
-            <h2 class="firm">So what's inside?</h2>
-          </div>
-          <div class="col3of4">
-            <div class="js-structure"></div>
-          </div>
-        </div>
+        <div class="js-look"></div>
+        <div class="js-inheritance"></div>
+        <div class="js-object"></div>
+        <div class="js-module"></div>
+        <div class="js-codestyle"></div>
+        <div class="js-sass"></div>
+        <div class="js-classname"></div>
+        <div class="js-structure"></div>
       </div>
     </div>
   </body>
