--- a/index.html
+++ b/index.html
@@ -31,5 +31,26 @@
         <div class="js-structure"></div>
       </div>
     </div>
+
+    <script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter15049390 = new Ya.Metrika({id:15049390, enableAll: true, webvisor:true});
+            } catch(e) {}
+        });
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+    </script>
+    <noscript><div><img src="//mc.yandex.ru/watch/15049390" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
