--- a/futurico/index.html
+++ b/futurico/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>Futurico UI pack HTML Edition based on Scaffy framework</title>
+    <title>Futurico UI pack HTML Edition based on Scaffy approach</title>
     <link href="bundle.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="javascripts/vendor/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
@@ -65,7 +65,7 @@
               </strong>
             </h3>
             Using
-            <a href="http://railsware.github.com/scaffy">Scaffy</a>
+            <a href="http://scaffy.railsware.com">Scaffy</a>
             by 
             <a href="http://railsware.com" class="site-info-rw-link">Railsware</a>
           </div>
