--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/haml.js"></script>
     <script type="text/javascript" src="js/preboot.js"></script>
     <script type="text/javascript" src="js/ga.js"></script>
-    <meta name="viewport" content="initial-scale = 1, maximum-scale = 1">
+    <meta name="viewport" content="initial-scale = 1.0, width = device-width">
   </head>
   <body>
     <div class="container">
