Stylesheets structure refactoring

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Scaffy approach</title>
+    <link href="css/scaffy/bundle.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="css/library/library.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/application.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/ext/jquery-1.7.1.js"></script>
     <script type="text/javascript" src="js/ext/underscore.js"></script>
