--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div class="js-codestyle"></div>
         <div class="js-sass"></div>
         <div class="js-structure"></div>
+        <div class="js-responsive"></div>
+        <div class="js-grids"></div>
+        <div class="js-who-use-it"></div>
       </div>
     </div>
 
