--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link href="css/scaffy/bundle.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/library/library.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/application.css" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="images/fav/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/fav/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/fav/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/fav/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/fav/apple-touch-icon-57-precomposed.png">
     <script type="text/javascript" src="js/ext/jquery-1.7.1.js"></script>
     <script type="text/javascript" src="js/ext/underscore.js"></script>
     <script type="text/javascript" src="js/ext/underscore.string.js"></script>
