--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/scaffy/bundle.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/library/library.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="css/application.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="images/fav/favicon.ico">
+    <link rel="shortcut icon" href="images/fav/favicon.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/fav/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/fav/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/fav/apple-touch-icon-72-precomposed.png">
